调整import的写法

--- a/segmentation/config.json
+++ b/segmentation/config.json
@@ -1,11 +1,13 @@
 {
-  "batch_size": 8,
+  "batch_size": 1,
   "num_workers": 8,
   "seed": 1234,
   "lr": 1e-3,
   "devices": [0],
   "num_classes": 2,
   "epochs": 2,
+  "sam_model_name": "vit_b",
+  "sam_checkpoint": "C:\\Users\\chenyihan\\Downloads\\sam_vit_b_01ec64.pth",
   "lr_scheduler": "cosine",
   "lr_decay_steps": 20,
   "lr_decay_rate": 0.5,
@@ -16,7 +18,7 @@
   "load_v_num": null,
   "dataset": "segment_data",
   "data_dir": "dataset/scratch/scratchDataset1128/beimian",
-  "model_name": "pp_lite_seg",
+  "model_name": "prompt_sam",
   "loss": "ce",
   "weight_decay": 1e-5,
   "no_augment": false,
