PIDNet引入BondaryLoss，数据读取相应更改

--- a/segmentation/config.json
+++ b/segmentation/config.json
@@ -1,11 +1,11 @@
 {
-  "batch_size": 1,
+  "batch_size": 8,
   "num_workers": 8,
   "seed": 1234,
   "lr": 1e-3,
-  "devices": [0],
+  "devices": [3],
   "num_classes": 2,
-  "epochs": 2,
+  "epochs": 100,
   "sam_model_name": "vit_b",
   "sam_checkpoint": "C:\\Users\\chenyihan\\Downloads\\sam_vit_b_01ec64.pth",
   "lr_scheduler": "cosine",
@@ -18,8 +18,8 @@
   "load_v_num": null,
   "dataset": "segment_data",
   "data_dir": "dataset/scratch/scratchDataset1128/beimian",
-  "model_name": "prompt_sam",
-  "loss": "ce",
+  "model_name": "pid_net",
+  "loss": ["ce", "bd"],
   "weight_decay": 1e-5,
   "no_augment": false,
   "log_dir": "lightning_logs",
