fix bugs && complete prompt_sam train and val

--- a/segmentation/config.json
+++ b/segmentation/config.json
@@ -1,15 +1,15 @@
 {
-  "batch_size": 8,
+  "batch_size": 1,
   "num_workers": 8,
   "seed": 1234,
-  "lr": 1e-3,
-  "devices": [3],
-  "num_classes": 2,
-  "epochs": 100,
-  "sam_model_name": "vit_b",
-  "sam_checkpoint": "C:\\Users\\chenyihan\\Downloads\\sam_vit_b_01ec64.pth",
-  "lr_scheduler": "cosine",
-  "lr_decay_steps": 20,
+  "lr": 5e-2,
+  "devices": [7],
+  "num_classes": 8,
+  "epochs": 1000,
+  "sam_model_name": "vit_t",
+  "sam_checkpoint": "C:\\Users\\chenyihan\\Downloads\\mobile_sam.pt",
+  "lr_scheduler": null,
+  "lr_decay_steps": 1000,
   "lr_decay_rate": 0.5,
   "lr_decay_min_lr": 1e-5,
   "load_best": false,
@@ -17,9 +17,9 @@
   "load_ver": null,
   "load_v_num": null,
   "dataset": "segment_data",
-  "data_dir": "dataset/scratch/scratchDataset1128/beimian",
-  "model_name": "pid_net",
-  "loss": ["ce", "bd"],
+  "data_dir": "dataset/product/2016",
+  "model_name": "prompt_sam",
+  "loss": ["bce_with_logits"],
   "weight_decay": 1e-5,
   "no_augment": false,
   "log_dir": "lightning_logs",
