add edge_sam to PromptSAM

--- a/segmentation/config.json
+++ b/segmentation/config.json
@@ -3,11 +3,11 @@
   "num_workers": 8,
   "seed": 1234,
   "lr": 5e-2,
-  "devices": [7],
+  "devices": [3],
   "num_classes": 8,
   "epochs": 1000,
-  "sam_model_name": "vit_t",
-  "sam_checkpoint": "C:\\Users\\chenyihan\\Downloads\\mobile_sam.pt",
+  "sam_model_name": "edge_sam",
+  "sam_checkpoint": "C:\\Users\\chenyihan\\Downloads\\edge_sam.pth",
   "lr_scheduler": null,
   "lr_decay_steps": 1000,
   "lr_decay_rate": 0.5,
