--- a/segmentation/config.json
+++ b/segmentation/config.json
@@ -6,8 +6,9 @@
   "devices": [3],
   "num_classes": 8,
   "epochs": 1000,
-  "sam_model_name": "edge_sam",
-  "sam_checkpoint": "C:\\Users\\chenyihan\\Downloads\\edge_sam.pth",
+  "sam_model_name": "vit_h",
+  "sam_checkpoint": "C:\\Users\\chenyihan\\Downloads\\sam_vit_h_4b8939.pth",
+  "image_size": 896,
   "lr_scheduler": null,
   "lr_decay_steps": 1000,
   "lr_decay_rate": 0.5,
@@ -23,5 +24,6 @@
   "weight_decay": 1e-5,
   "no_augment": false,
   "log_dir": "lightning_logs",
-  "aug_prob": 0.5
+  "aug_prob": 0.5,
+  "mixed_precision": false
 }
