--- a/classification/config.json
+++ b/classification/config.json
@@ -2,12 +2,12 @@
   "batch_size": 8,
   "num_workers": 8,
   "seed": 1234,
-  "lr": 1e-3,
+  "lr": 1e-4,
   "devices": [0],
   "num_classes": 5,
-  "epochs": 2,
+  "epochs": 100,
   "lr_scheduler": "cosine",
-  "lr_decay_steps": 20,
+  "lr_decay_steps": 100,
   "lr_decay_rate": 0.5,
   "lr_decay_min_lr": 1e-5,
   "load_best": false,
@@ -16,10 +16,13 @@
   "load_v_num": null,
   "dataset": "classify_data",
   "data_dir": "dataset/flower_photos",
-  "model_name": "simple_net",
-  "loss": "bce",
+  "model_name": "resnet50",
+  "loss": "ce",
   "weight_decay": 1e-5,
   "no_augment": false,
   "log_dir": "lightning_logs",
-  "aug_prob": 0.5
+  "input_size": [224,224],
+  "aug_prob": 0.5,
+  "img_mean": [0,0,0],
+  "img_std": [1,1,1]
 }
