--- a/classification/config.json
+++ b/classification/config.json
@@ -1,10 +1,10 @@
 {
-  "batch_size": 16,
+  "batch_size": 8,
   "num_workers": 8,
   "seed": 1234,
-  "lr": 1e-4,
-  "devices": [3],
-  "num_classes": 5,
+  "lr": 5e-5,
+  "devices": [7],
+  "num_classes": 3,
   "epochs": 500,
   "lr_scheduler": "cosine",
   "lr_decay_steps": 500,
@@ -15,13 +15,13 @@
   "load_ver": null,
   "load_v_num": null,
   "dataset": "classify_data",
-  "data_dir": "dataset/flower_photos",
-  "model_name": "resnet50",
+  "data_dir": "dataset/2016tiehuan",
+  "model_name": "mobilevit_s",
   "loss": "ce",
   "weight_decay": 1e-5,
   "no_augment": false,
   "log_dir": "lightning_logs",
-  "input_size": [224,224],
+  "input_size": [768,768],
   "aug_prob": 0.5,
   "img_mean": [0,0,0],
   "img_std": [1,1,1]
